--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ test-client:
     - yarn install
   script:
     - echo "Testing client dummy code."
-    - sleep 10 #yarn test-client
+    - yarn test-client
     - echo "Client tested completed."
 
 # Test server
