--- a/src/server/config.json
+++ b/src/server/config.json
@@ -6,8 +6,8 @@
         "publicUrl": "/files",
         "ssl": {
             "ca": null,
-            "key": "./src/server/certificate/key.pem",
-            "cert": "./src/server/certificate/certificate.crt"
+            "key": "./src/server/certificate/bookhouse-key.pem",
+            "cert": "./src/server/certificate/bookhouse-cert.pem"
         },
         "routers":
         [
