--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "base64url": "^3.0.1",
+    "bcrypt": "^5.0.1",
     "clsx": "^1.1.1",
     "concurrently": "^6.3.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "hjson": "^3.2.2",
+    "mongoose": "^6.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.1",
@@ -26,10 +32,8 @@
   "scripts": {
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-
     "client": "react-scripts start",
     "server": "nodemon ./src/server/server.node",
-    
     "test-client": "react-scripts test",
     "test-server": "exit 0"
   },
