--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,9 +13,9 @@ before_script:
 # Define stages
 stages:
   - version
-  - build
   - test
-
+  - build
+  - deploy
 
 # Check versions
 version-all:
@@ -27,17 +27,6 @@ version-all:
     - npm -v
     - echo "Yarn:"
     - yarn -v
-
-
-# Install dependencies
-build-packages:
-  stage: build
-  before_script:
-    - yarn config set cache-folder .yarn
-  script:
-    - yarn install
-
-
 
 # Test client
 test-client:
@@ -70,4 +59,25 @@ test-all:
   script:
     - echo "Combined testing server dummy code."
     - sleep 10
+
+
+# Install dependencies
+build-packages:
+  stage: build
+  before_script:
+    - yarn config set cache-folder .yarn
+  script:
+    - yarn install
     - echo "Server tested completed."
+    - yarn build
+    artifacts:
+      paths:
+        - build/
+
+
+# Deploy client to netlify
+netlify:
+  stage: deploy
+  script:
+    - npm install -g netlify-cli
+    - netlify deploy --dir=build --prod
