--- a/src/server/config.json
+++ b/src/server/config.json
@@ -14,6 +14,10 @@
             {
                 "module": "./routers/room.router",
                 "url": "/"
+            },
+            {
+                "module": "./routers/auth.router",
+                "url": "/api/auth/"
             }
         ]
     },
