Trying to fix process.env failures by modifying .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ build-packages:
   image: node:15
   script:
     - yarn install
-    - yarn build
+    - CI= yarn build
   artifacts:
     paths:
       - build/
