--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "hjson": "^3.2.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.1",
