--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,32 @@
 # Define stages
 stages:
-  - test
+  - environment
   - build
+  - test
   - deploy
+
+
+# Check environment
+check-environment:
+  stage: environment
+  image: node:15
+  script:
+    - node -v
+    - npm -v
+    - yarn -v
+
+
+# Install dependencies
+build-packages:
+  stage: build
+  image: node:15
+  script:
+    - yarn install
+    - CI= yarn build
+  artifacts:
+    paths:
+      - build/
+
 
 # Test client
 test-client:
@@ -32,17 +56,6 @@ test-all:
     - echo "Combined testing server dummy code."
     - sleep 10
 
-
-# Install dependencies
-build-packages:
-  stage: build
-  image: node:15
-  script:
-    - yarn install
-    - CI= yarn build
-  artifacts:
-    paths:
-      - build/
 
 
 # Deploy client to netlify
