--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "client": "react-scripts start",
     "server": "nodemon ./src/server/server.node",
     "test-client": "react-scripts test",
-    "test-server": "exit 0"
+    "test-server": "jest"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +51,14 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "cross-env": "^7.0.3",
+    "nodemon": "^2.0.15",
+    "supertest": "^6.1.6"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
