--- a/src/server/config.json
+++ b/src/server/config.json
@@ -29,7 +29,7 @@
             },
             {
                 "module": "./routers/user.router",
-                "url": "/user/"
+                "url": "/api/user/"
             },
             {
                 "module": "./routers/book.router",
