Revert "user model changed: book reference added"
This reverts commit 366992149fd6a259cdeb689b3e8e50fbdb0d3e79

--- a/src/server/config.json
+++ b/src/server/config.json
@@ -29,7 +29,7 @@
             },
             {
                 "module": "./routers/user.router",
-                "url": "/api/user/"
+                "url": "/user/"
             },
             {
                 "module": "./routers/book.router",
