Restored testing and dockerization commit 8e1a27c59f44d848d9477a0829da5e929f2c89c6

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "client": "react-scripts start",
     "server": "nodemon ./src/server/server.node",
     "test-client": "react-scripts test",
-    "test-server": "exit 0"
+    "test-server": "jest ."
   },
   "eslintConfig": {
     "extends": [
@@ -63,6 +63,7 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "supertest": "^6.1.6"
   }
 }
