jest environment has been updated

--- a/package.json
+++ b/package.json
@@ -65,5 +65,8 @@
   "devDependencies": {
     "nodemon": "^2.0.15",
     "supertest": "^6.1.6"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
